<resources>
    <string name="app_name">SrcDSUtil</string>
    <string name="action_add_server">Add Server</string>
    <string name="message_add_server">Please enter server address and port: e.g. sample.com:port. Default port is 27015 if port is omitted.</string>
    <string name="action_delete_server">Remove</string>
    <string name="action_refresh_server">Refresh</string>
    <string name="toast_refreshing">Refreshing</string>
    <string name="subtext_unable_to_contact_server">Unable to contact server!</string>
    <string name="subtext_unrecognized_server">Unrecognized Server</string>
    <string name="subtext_querying">Querying…</string>
    <string name="subtext_unable_to_retrieve_player_list">Unable to retrieve player list</string>
    <string name="text_server_name">Server Name</string>
    <string name="text_map_name">Map Name</string>
    <string name="text_online_player">Player</string>
    <string name="text_server_address">Server Address</string>
    <string name="action_edit_server">Edit</string>
    <string name="message_edit_server">Edit address and/or port</string>
    <string name="action_about">About</string>
    <string name="about_author">Author:</string>
    <string name="about_text">Monitor L4D2 dedicated servers from your Android Phone!</string>
    <string name="about_text2">This is my first Android App</string>
    <string name="about_text3">Click the image to check out my Github page!</string>
    <string name="about_date">March 20, 2018</string>
    <string name="action_rcon">RCON</string>
    <string name="btn_send_text">Send</string>
    <string name="rcon_status_authorizing">Authorizing…</string>
    <string name="rcon_status_authorize_failed">Failed.</string>
    <string name="rcon_status_authorize_succeeded">Ready for commands.</string>
    <string name="rcon_status_command_failed">Command failed.</string>
    <string name="rcon_password">RCON password</string>
    <string name="rcon_password_hint">The value of cvar \"rcon_password\" on server</string>
    <string name="action_clear_log">Clear log</string>
    <string name="action_edit_rcon_password">Edit RCON password</string>
    <string name="game_unknown">Unknown</string>
    <string name="game_l4d2">Left 4 Dead 2</string>
    <string name="game_cs16">Counter Strike 1.6</string>
</resources>
